# AI_DM

./: .gitignore  README.md  ROADMAP.md  claude.md  restart-ios.sh  start.bat  start.sh  test_game_flow.py  test_ws_flow.py
backend/: .env.example  mcp_config_example.json  migrate_to_db.py  pyproject.toml
backend/app/: anomaly.py  auth.py  community.py  config.py  content_db.py  dm.py  doc_extractor.py  economy.py  evaluator.py  intervention.py  llm.py  main.py  models.py  pet.py  puzzle_loader.py  puzzle_utils.py  room.py  state_machine.py  tts.py  visibility.py  voting.py  ws.py
backend/app/agents/: doc_parser.py  judge.py  narrator.py  npc.py  (+6 more)
backend/data/: auth.db  community.db  content.db
backend/eval/: __init__.py  __main__.py  report.py  run.py  runner.py  scenarios.py
backend/mcp_server/: __init__.py  __main__.py  server.py
backend/tests/: conftest.py  sim_three_recon.py  sim_two_players.py  test_agents.py  test_anomaly.py  test_auth.py  test_clues.py  test_dm.py  test_eval.py  test_i18n.py  test_intervention.py  test_latency.py  test_mcp.py  test_phase1_anomaly.py  test_phase1_hints.py  test_phase1_puzzle_source.py  test_phase1_reporting.py  test_phase1_skip.py  test_phase1_spectators.py  test_phase2_evaluator.py  test_phase2_mvp.py  test_phase2_scoring.py  test_phase4_economy.py  test_phase5_pet.py  test_private_chat.py  test_redteam.py  test_reports.py  test_room.py  test_room_lobby.py  test_scoring.py  test_spectator.py  test_state_machine.py  test_trace.py  test_tracer.py  test_tts.py  test_turn_based.py  test_visibility.py  test_voting.py
(+155 files in other folders)
